--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Show Some Things (in Production)</title>
+    <title>Take Home Problem</title>
   </head>
   <body>
-    <h1>Showing Some Things</h1>
+    <h1>Veggie Counter</h1>
     <div id="app"></div>
     <script src="/bundle.js"></script>
   </body>
